--- a/default.conf
+++ b/default.conf
@@ -2,9 +2,9 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   client_max_body_size 100M;
-  server_name sonarqube.citrincooperman.com;
-  ssl_certificate /etc/nginx/sonarqube.crt;
-  ssl_certificate_key /etc/nginx/sonarqube.key;
+  server_name sonarqube.altudo.net;
+  ssl_certificate /etc/nginx/nginx.crt;
+  ssl_certificate_key /etc/nginx/nginx.key;
   access_log /var/log/nginx/sonarqube.access.log;
   location / {
     proxy_set_header Host $host;
@@ -12,7 +12,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-SSL on;
     proxy_set_header X-Forwarded-Host $host;
-    proxy_pass http://sonarqube:9000;
+    proxy_pass http://81.93.23.778:9000;
     proxy_redirect off;
   }
 }
